# cmk

./: CMakeLists.txt  main.cpp
step-1/exercise-3/: CMakeLists.txt  main.cpp
step-1/exercise-3-cmakedefine/: config.hpp.in
step-2/exercise-1-lib/: CMakeLists.txt  main.cpp
step-2/exercise-1-lib/lib/: CMakeLists.txt  bin-search-lib.cpp
step-2/exercise-2-options/: CMakeLists.txt  main.cpp
step-3/exercise-1-usage-requirements/: CMakeLists.txt
step-3/exercise-1-usage-requirements/lib/: CMakeLists.txt  bin-search-lib.hpp
step-3/exercise-2-setting-standart/: CMakeLists.txt
step-4/exersice-1-expr-generator/: CMakeLists.txt  main.cpp
step-5/exercise-2-ctest/: CMakeLists.txt
step-5/exercise-2-ctest/my-alg-lib/: CMakeLists.txt  my-alg.cpp
step-5/exercise-2-ctest/test/: tests.cpp
step-6/exercise-1-send-results-testing-dashboard/: CMakeLists.txt  main.cpp
step-6/exercise-1-send-results-testing-dashboard/my-alg-lib/: my-alg.hpp
step-6/exercise-1-send-results-testing-dashboard/test/: CMakeLists.txt
win-lib/lib/: CMakeLists.txt  hi.cpp  hi.hpp
